feat(api): fix admin seeder db error and updated auth swagger doc
